--- a/index.html
+++ b/index.html
@@ -76,6 +76,36 @@
                 </div>
             </div>
     </div>
+            <!-- Card del personaggio 4 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="images/Green Ranger.jpg" class="card-img-top" alt="Red Ranger">
+                    <div class="card-body">
+                        <h5 class="card-title">Green Ranger</h5>
+                        <p class="card-text">Il verde del team, noto per la sua saggezza e equilibrio.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Card del personaggio 5 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="images/Pink Ranger.png" class="card-img-top" alt="Red Ranger">
+                    <div class="card-body">
+                        <h5 class="card-title">Pink Ranger</h5>
+                        <p class="card-text">La rosa del team, nota per la sua empatia e gentilezza.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Card del personaggio 6 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="images/Black Ranger.png" class="card-img-top" alt="Red Ranger">
+                    <div class="card-body">
+                        <h5 class="card-title">Black Ranger</h5>
+                        <p class="card-text">Il nero del team, noto per la sua determinazione e integrità.</p>
+                    </div>
+            </div>
+    </div>
 
     <!-- Script Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
